# Vietnamese-Recruit-Onboard-Operate-Manage

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  PROJECT_OVERVIEW.md  README.md  docker-compose.infra.yml  docker-compose.override.yml  docker-compose.yml  harness.db  render.yaml
.github/: CODEOWNERS
backend/: .dockerignore  AGENTS.md  Dockerfile  Dockerfile.local  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_users_table.py  002_create_oauth_grants_table.py  003_create_refresh_tokens_table.py  008_create_gmail_tables.py  009_create_recruitment_tables.py  010_add_role_to_users.py  010_create_leave_types_table.py  011_create_leave_balances_table.py  011_create_whitelist_entries_table.py  012_create_leave_requests_table.py  012_create_oauth_configs_table.py  013_create_audit_logs_table.py  013_create_work_schedules_table.py  014_create_attendance_records_table.py  014_create_leave_types_table.py  015_create_leave_balances_table.py  015_create_overtime_requests_table.py  016_create_holidays_table.py  016_create_leave_requests_table.py  017_create_work_schedules_table.py  018_create_attendance_records_table.py  019_create_overtime_requests_table.py  020_create_holidays_table.py  021_create_salary_configs_table.py  022_create_allowances_table.py  023_create_dependents_table.py  024_create_payroll_periods_table.py  025_create_payslips_table.py  026_create_position_salaries_table.py  027_drop_attendance_payroll_tables.py  028_create_policy_tables.py  029_seed_policy_templates.py
backend/config/: whitelist.txt
backend/scripts/: seed_attendance.py  seed_leave.py  seed_payroll.py
backend/src/: database.py  main.py
backend/src/modules/attendance/: __init__.py  container.py  worker.py
(+684 files in other folders)
