[project]
name = "vroom-hr-backend"
version = "0.1.0"
description = "Vroom HR - Vietnamese Recruit-Onboard-Operate-Manage platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "sqlmodel>=0.0.22",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "authlib>=1.3.0",
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
    "redis>=5.0.0",
    "uvicorn>=0.30.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "aioboto3>=13.0.0",
    "openpyxl>=3.1.0",
    "python-multipart>=0.0.29",
    "arq>=0.26.0",
    "PyMuPDF>=1.24.0",
    "python-docx>=1.1.0",
    "openai>=1.30.0",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.100.0",
    "respx>=0.21.0",
    "testcontainers>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "N818",   # Exception naming convention — existing codebase uses *Exception suffix
    "UP042",  # str+Enum pattern — requires Python 3.11 StrEnum migration
    "E402",   # Module-level imports after load_dotenv() — intentional pattern
]

[tool.ruff.lint.per-file-ignores]
"src/modules/employee/application/import_service.py" = ["F841"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
